--- a/app/src/main/res/layout/fragment_cinema.xml
+++ b/app/src/main/res/layout/fragment_cinema.xml
@@ -27,6 +27,7 @@
         android:id="@+id/rv_list"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:background="@color/white_background_color"
         android:clipToPadding="false"
         android:paddingBottom="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
