--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,6 @@
     <dimen name="poster_text_size_middle">36sp</dimen>
     <dimen name="poster_text_size_huge">48sp</dimen>
     <dimen name="screening_margin">2dp</dimen>
+    <dimen name="default_action_bar_size">56dp</dimen>
+    <dimen name="default_status_bar_size">24dp</dimen>
 </resources>
