--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,5 @@
     <dimen name="screening_margin">2dp</dimen>
     <dimen name="default_action_bar_size">56dp</dimen>
     <dimen name="default_status_bar_size">24dp</dimen>
+    <dimen name="map_bottom_sheet_height">216dp</dimen>
 </resources>
