--- a/app/src/main/res/layout/fragment_cinemas_map.xml
+++ b/app/src/main/res/layout/fragment_cinemas_map.xml
@@ -11,12 +11,18 @@
         android:layout_height="match_parent"
         android:orientation="vertical" />
 
-    <android.support.v4.view.ViewPager
-        android:id="@+id/cinema_view_pager"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:behavior_hideable="true"
         app:behavior_peekHeight="@dimen/map_bottom_sheet_height"
-        app:layout_behavior="android.support.design.widget.BottomSheetBehavior" />
+        app:layout_behavior="com.markus.subscity.ViewPagerBottomSheetBehavior">
+
+        <android.support.v4.view.ViewPager
+            android:id="@+id/cinema_view_pager"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+    </LinearLayout>
 
 </android.support.design.widget.CoordinatorLayout>
