--- a/app/src/main/res/layout/fragment_cinemas_map.xml
+++ b/app/src/main/res/layout/fragment_cinemas_map.xml
@@ -17,6 +17,6 @@
         android:layout_height="match_parent"
         app:behavior_hideable="true"
         app:behavior_peekHeight="@dimen/map_bottom_sheet_height"
-        app:layout_behavior="com.markus.subscity.ViewPagerBottomSheetBehavior" />
+        app:layout_behavior="com.markus.subscity.widgets.ViewPagerBottomSheetBehavior" />
 
 </android.support.design.widget.CoordinatorLayout>
