--- a/app/src/main/res/layout/dialog_rate_app.xml
+++ b/app/src/main/res/layout/dialog_rate_app.xml
@@ -8,7 +8,7 @@
     android:orientation="vertical"
     app:behavior_hideable="true"
     android:background="@drawable/shadow_bg_8dp"
-    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">
+    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
 
     <LinearLayout
         android:layout_width="match_parent"
