--- a/app/src/main/res/layout/fragment_cinemas_map.xml
+++ b/app/src/main/res/layout/fragment_cinemas_map.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/root_coordinator"
     android:layout_width="match_parent"
@@ -11,7 +11,7 @@
         android:layout_height="match_parent"
         android:orientation="vertical" />
 
-    <android.support.v4.view.ViewPager
+    <androidx.viewpager.widget.ViewPager
         android:id="@+id/cinema_view_pager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -19,4 +19,4 @@
         app:behavior_peekHeight="@dimen/map_bottom_sheet_height"
         app:layout_behavior="com.markus.subscity.widgets.ViewPagerBottomSheetBehavior" />
 
-</android.support.design.widget.CoordinatorLayout>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
