--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">@color/primary_color</color>
-    <color name="colorPrimaryDark">@color/primary_dark_color</color>
-    <color name="colorAccent">@color/primary_color</color>
 
-    <color name="black_color">#000000</color>
+    <!-- New Colors -->
+
+    <color name="main_color">#642957</color>
+    <color name="main_ripple_color">#642957</color>
+
+    <color name="splash_color">#642957</color>
+    <color name="splash_status_bar_color">#4F2045</color>
+
+    <color name="bottom_bar_active_color">#642957</color>
+    <color name="bottom_bar_inactive_color">#A9AEB2</color>
+    <color name="bottom_bar_background_color">#FFFFFF</color>
+
+    <color name="title_color">#000000</color>
+    <color name="subtitle_color">#8A000000</color>
+    <color name="settings_color">#60565e</color>
+
+    <color name="screening_item_text_color">#000000</color>
+    <color name="screening_item_text_pressed_color">#FFFFFF</color>
+
+    <color name="status_bar_color">#4F2045</color>
+
+    <color name="divider_color">#9E9E9E</color>
+
+    <!-- Old Colors -->
 
     <color name="primary_color">#642957</color>
     <color name="primary_color_8">#14642957</color>
@@ -12,20 +32,11 @@
     <color name="primary_color_24">#3d642957</color>
     <color name="primary_color_pressed">#7D336D</color>
 
-    <color name="primary_dark_color">#4F2045</color>
-    <color name="title_color">@color/black_color</color>
-    <color name="subtitle_color">#8A000000</color>
-    <color name="settings_color">#60565e</color>
-    <color name="inactive_color">#a9aeb2</color>
-    <color name="white_color">#ffffff</color>
+    <color name="white_color">#FFFFFF</color>
     <color name="white_background_color">#FAFAFA</color>
     <color name="map_background_color">#EFEAE6</color>
-    <color name="setting_bg_color">#42642957</color>
-    <color name="divider_color">#9e9e9e</color>
 
-    <color name="ripple_color">#3dffffff</color>
-
-    <color name="yellow_color">#EEC689</color>
+    <color name="ripple_color">#3DFFFFFF</color>
 
     <!-- Social Networks -->
     <color name="telegram_color">#0D86D7</color>
