--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,8 +3,9 @@
     <dimen name="poster_text_size">24sp</dimen>
     <dimen name="poster_text_size_middle">36sp</dimen>
     <dimen name="poster_text_size_huge">48sp</dimen>
-    <dimen name="screening_margin">2dp</dimen>
+    <dimen name="screening_margin">8dp</dimen>
     <dimen name="default_action_bar_size">56dp</dimen>
     <dimen name="default_status_bar_size">24dp</dimen>
     <dimen name="map_bottom_sheet_height">160dp</dimen>
+    <dimen name="screenings_padding">16dp</dimen>
 </resources>
