--- a/app/src/main/res/layout/dialog_rate_app.xml
+++ b/app/src/main/res/layout/dialog_rate_app.xml
@@ -33,7 +33,7 @@
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
             android:layout_marginTop="8dp"
-            android:fontFamily="sans-serif-light"
+            android:fontFamily="@font/roboto_light"
             android:text="@string/rate_subtitle" />
     </LinearLayout>
 
