--- a/app/src/main/res/layout/item_movie.xml
+++ b/app/src/main/res/layout/item_movie.xml
@@ -31,12 +31,12 @@
         android:id="@+id/tv_movie_name"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginBottom="8dp"
         android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
         android:layout_marginTop="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginBottom="8dp"
         android:ellipsize="end"
-        android:fontFamily="sans-serif-medium"
+        android:fontFamily="@font/roboto_medium"
         android:gravity="left|bottom"
         android:maxLines="3"
         android:textColor="@color/white_color"
@@ -53,15 +53,15 @@
         style="@style/AppTheme.TextView.Small.White"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="24dp"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
+        android:layout_marginBottom="24dp"
         android:ellipsize="marquee"
         android:singleLine="true"
         android:textStyle="italic"
         app:layout_constraintBottom_toBottomOf="@+id/shadow"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:text="боевик, приключение, боевик, приключение, боевик, приключение, боевик, приключение, боевик, приключение, боевик, приключение" />
+        tools:text="Боевик, приключение, боевик, приключение, боевик, приключение, боевик, приключение, боевик, приключение, боевик, приключение" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
