--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -20,6 +20,8 @@
 
     <color name="divider_color">#1AFFFFFF</color>
 
+    <color name="toolbar_title_color">#E1E1E1</color>
+
     <!-- Old Colors -->
 
     <color name="primary_color">#232323</color>
