--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -24,6 +24,8 @@
 
     <color name="divider_color">#9E9E9E</color>
 
+    <color name="toolbar_title_color">#FFFFFF</color>
+
     <!-- Old Colors -->
 
     <color name="primary_color">#642957</color>
