--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,14 +1,14 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
 
-    <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.DayNight.DarkActionBar">
-        <!-- Customize your theme here. -->
+    <style name="CoreAppTheme" parent="Theme.AppCompat.DayNight.DarkActionBar">
         <item name="colorPrimary">@color/primary_color</item>
         <item name="colorPrimaryDark">@color/status_bar_color</item>
         <item name="colorAccent">@color/primary_color</item>
         <item name="colorControlHighlight">@color/main_ripple_color</item>
         <item name="actionBarTheme">@style/AppTheme.Toolbar</item>
     </style>
+
+    <style name="AppTheme" parent="CoreAppTheme" />
 
     <style name="AppTheme.Activity">
         <item name="android:windowIsTranslucent">true</item>
