--- a/app/src/main/res/drawable-v21/review_bg.xml
+++ b/app/src/main/res/drawable-v21/review_bg.xml
@@ -2,7 +2,7 @@
     android:color="@color/ripple_color">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/primary_color" />
+            <solid android:color="@color/toolbar_color" />
         </shape>
     </item>
 </ripple>
