--- a/app/src/main/res/drawable/review_bg.xml
+++ b/app/src/main/res/drawable/review_bg.xml
@@ -6,7 +6,7 @@
     </item>
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/primary_color" />
+            <solid android:color="@color/toolbar_color" />
         </shape>
     </item>
 </selector>
