--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,9 +1,9 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
 
     <style name="CoreAppTheme" parent="Theme.AppCompat.DayNight.DarkActionBar">
-        <item name="colorPrimary">@color/primary_color</item>
+        <item name="colorPrimary">@color/toolbar_color</item>
         <item name="colorPrimaryDark">@color/status_bar_color</item>
-        <item name="colorAccent">@color/primary_color</item>
+        <item name="colorAccent">@color/accent_color</item>
         <item name="colorControlHighlight">@color/main_ripple_color</item>
         <item name="actionBarTheme">@style/AppTheme.Toolbar</item>
     </style>
