--- a/app/src/main/res/drawable-v21/selectable_item_bg.xml
+++ b/app/src/main/res/drawable-v21/selectable_item_bg.xml
@@ -1,5 +1,5 @@
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
-    android:color="@color/primary_color_24">
+    android:color="@color/main_ripple_color">
     <item android:id="@android:id/mask">
         <shape android:shape="rectangle">
             <solid android:color="@android:color/white" />
