--- a/app/src/main/res/drawable-v21/telegram_bg.xml
+++ b/app/src/main/res/drawable-v21/telegram_bg.xml
@@ -1,5 +1,5 @@
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
-    android:color="@color/ripple_color">
+    android:color="@color/white_ripple_color">
     <item>
         <shape android:shape="rectangle">
             <solid android:color="@color/telegram_color" />
