--- a/app/src/main/res/drawable/selectable_item_bg.xml
+++ b/app/src/main/res/drawable/selectable_item_bg.xml
@@ -1,7 +1,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="true">
         <shape android:shape="rectangle">
-            <solid android:color="@color/primary_color_16" />
+            <solid android:color="@color/main_color_pressed" />
         </shape>
     </item>
 </selector>
