--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -3,7 +3,12 @@
 
     <!-- New Colors -->
 
-    <color name="main_ripple_color">#4D9F2184</color>
+    <color name="main_color">#642957</color>
+    <color name="main_ripple_color">#3D9F2184</color>
+    <color name="main_color_pressed">#299F2184</color>
+
+    <color name="splash_color">#642957</color>
+    <color name="splash_status_bar_color">#4F2045</color>
 
     <color name="bottom_bar_active_color">#9F2184</color>
     <color name="bottom_bar_inactive_color">#C4C4C4</color>
@@ -29,18 +34,17 @@
 
     <color name="accent_color">#E1E1E1</color>
 
+    <color name="main_background_color">#1E1E1E</color>
+
+    <color name="white_ripple_color">#3DFFFFFF</color>
+
     <!-- Old Colors -->
 
-    <color name="primary_color_8">#EFEBEF</color>
-    <color name="primary_color_16">#29642957</color>
-    <color name="primary_color_24">#3d642957</color>
     <color name="primary_color_pressed">#7D336D</color>
 
     <color name="white_color">#FFFFFF</color>
-    <color name="main_background_color">#1E1E1E</color>
     <color name="movies_background_color">#FAFAFA</color>
     <color name="map_background_color">#EFEAE6</color>
 
-    <color name="ripple_color">#3DFFFFFF</color>
 
 </resources>
