--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,10 +18,6 @@
     <color name="subtitle_color">#8A000000</color>
     <color name="settings_color">#60565e</color>
 
-    <color name="screening_item_text_color">#000000</color>
-    <color name="screening_item_text_pressed_color">#FFFFFF</color>
-    <color name="screening_item_price_color">#8A000000</color>
-
     <color name="status_bar_color">#4F2045</color>
 
     <color name="divider_color">#9E9E9E</color>
@@ -43,6 +39,13 @@
     <color name="white_color">#FFFFFF</color>
 
     <color name="movies_background_color">#FAFAFA</color>
+
+    <color name="screening_date_default_color">#737373</color>
+    <color name="screening_date_pressed_color">#CCCCCC</color>
+    <color name="screening_time_default_color">#642957</color>
+    <color name="screening_time_pressed_color">#FFFFFF</color>
+    <color name="screening_price_default_color">#000000</color>
+    <color name="screening_price_pressed_color">#CCCCCC</color>
 
     <!-- Social Networks -->
     <color name="telegram_color">#0D86D7</color>
